<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white" >
    
    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />
    
    <RelativeLayout 
        android:id="@+id/rlTab"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="1dp"
	    android:background="@drawable/tab_title_bg">
	    <LinearLayout
	        android:id="@+id/llTab"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:gravity="center_vertical" >
	
	        <TextView
	            android:id="@+id/ivTab1"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:paddingLeft="5dp"
	            android:paddingRight="5dp"
	            android:singleLine="true"
	            android:paddingTop="10dp"
	            android:paddingBottom="10dp"
	            android:gravity="center"
	            android:textColor="@android:color/white"
	            android:text="@string/listname_playlist" />
	        
	        <View 
	            android:id="@+id/separator1"
	            android:layout_width="2dp"
	            android:layout_height="40dp"
	            android:layout_marginTop="3dp"
	            android:layout_marginBottom="3dp"
	            android:background="@drawable/tab_divider_bg" />
	
	        <TextView
	            android:id="@+id/ivTab2"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:paddingLeft="5dp"
	            android:paddingRight="5dp"
	            android:singleLine="true"
	            android:paddingTop="10dp"
	            android:paddingBottom="10dp"
	            android:gravity="center"
	            android:textColor="@android:color/white"
	            android:text="@string/listname_folder" />
	        <View 
	            android:id="@+id/separator2"
	            android:layout_width="2dp"
	            android:layout_height="40dp"
	            android:layout_marginTop="3dp"
	            android:layout_marginBottom="3dp"
	            android:background="@drawable/tab_divider_bg" />
	
	        <TextView
	            android:id="@+id/ivTab3"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:paddingLeft="5dp"
	            android:paddingRight="5dp"
	            android:singleLine="true"
	            android:paddingTop="10dp"
	            android:paddingBottom="10dp"
	            android:gravity="center"
	            android:textColor="@android:color/white"
	            android:text="@string/listname_album" />
	        <View 
	            android:id="@+id/separator3"
	            android:layout_width="2dp"
	            android:layout_height="40dp"
	            android:layout_marginTop="3dp"
	            android:layout_marginBottom="3dp"
	            android:background="@drawable/tab_divider_bg"/>
	
	        <TextView
	            android:id="@+id/ivTab4"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:paddingLeft="5dp"
	            android:paddingRight="5dp"
	            android:singleLine="true"
	            android:paddingTop="10dp"
	            android:paddingBottom="10dp"
	            android:gravity="center"
	            android:textColor="@android:color/white"
	            android:text="@string/listname_artist" />
	    </LinearLayout>
	    
	    <RelativeLayout
	        android:id="@+id/rlCursor"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@id/llTab"
	        android:layout_alignLeft="@id/llTab"
	        android:layout_marginBottom="3dp"
	        android:layout_alignRight="@id/llTab" >
	
	        <ImageView
	            android:id="@+id/ivCursor"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentRight="true"
	            android:scaleType="matrix"
	            android:contentDescription="@string/image_descriptionr"
	            android:src="@drawable/tab_cursor" />
	        
	    </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>